--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600&display=swap" rel="stylesheet">
         <title>Oh my Food</title>
-        
     </head>
 <body>
-    <header class="wrapper">
-        <div class="logo-oh-my-food">
-        <img class="logo" src="logo/ohmyfood.png" alt="logo-oh-my-food">
-        </div>
+    <header>
+        <div class="first-title">
+            <div class="logo-oh-my-food">
+            <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
+            </div>
         <div class="location">
             <form>
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -24,14 +24,19 @@
                 <input type="text" name="search" id="search" placeholder="Paris,Belleville">   
             </form>
         </div>
+       </div>
         <div class="explorer">
+            <div class="explorer-titre">
             <h1>Réserver le menu qui vous convient</h1>
             <p>Découvrez des menus d'exeption séléctionnées par nos soins</p>
-            <button type="submit" class="explorer-button">
+            </div>
+            <div class="button-submit">
+            <button type="submit" class="explorer-button">Success</button>
+            </div>
         </div>
         <div></div>
     </header>
-    <main>
+    <main class="wrapper">
         <section>
         <h1>Fonctionnements</h1>
         <div class="boutons">
@@ -43,30 +48,29 @@
         <section>
             <h1>restaurants</h1>
             <a href="#" class="">
-                <img class="images" src="restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
-                <div class="description-palette-du-gout">
-                    <h4 class="titre-palette-du-gout">La palette du goût</h4>
+                <img class="images" src="images/restaurants/La-plalette.jpg" alt="La palette du goût">
+                <div class="description-carte">
+                    <h4 class="titre-carte">La palette du goût</h4>
                     <p class="localisation-palette"></p>
                 </div>
             </a>
             <a href="#" class="">
-                <img class="images" src="restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée">
-                <div class="description-palette-du-gout">
-                    <h4 class="titre-palette-du-gout">La palette du goût</h4>
+                <img class="images" src="images/restaurants/La-note.jpg" alt="La note enchantée">
+                <div class="description-carte">
+                    <h4 class="titre-carte">La palette du goût</h4>
                     <p class="localisation-palette"></p>
                 </div>
             </a>
             <a href="#" class="">
-                <img class="images" src="restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="A la française">
-                <div class="description-palette-du-gout">
-                    <h4 class="titre-palette-du-gout">La palette du goût</h4>
+                <img class="images" src="images/restaurants/A-la-francaise.jpg" alt="A la française">
+                <div class="description-carte">
+                    <h4 class="titre-carte">La palette du goût</h4>
                     <p class="localisation-palette"></p>
                 </div>
             </a>
-            <a href="#" class="">
-                <img class="images" src="restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens
-                ">
-                <div class="description-palette-du-gout">
+            <a class="youpi" href="#" class="">
+                <img class="images" src="images/restaurants/Le-délice.jpg" alt="Le délice des sens">
+                <div class="description-carte">
                     <h4 class="titre-palette-du-gout">La palette du goût</h4>
                     <p class="localisation-palette"></p>
                 </div>
@@ -75,21 +79,20 @@
         </main>
     <footer>
         <div class="logo-oh-my-food">
-            <img class="logo" src="logo/ohmyfood.png" alt="logo-oh-my-food">
+            <img class="logo-footer" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
         </div>
-        <div class="devenir-partenaire">
+        <div class="proposer-un-resto">
         <i class="fa fa-cutlery" aria-hidden="true"></i>
-        <p>Proposer un restaurant</p>
+        <p class="p-footer">Proposer un restaurant</p>
         </div>
-        <div>
+        <div class="partenaire">
             <i class="fa fa-handshake-o"></i>
-            <p>Devenir partenaire</p>
+            <p class="p-footer">Devenir partenaire</p>
         </div>
         <div>
-            <p>mentions légales</p>
+            <p class="p-footer">mentions légales</p>
             <a href="">Contact</a>
         </div>
         </div>
-
 
     </footer>
