fin index sans la typo

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                     <p class="localisation-resto">Ménilmontant</p>
                     </div>
                     <div class="position-heart">
-                    <i class="fas fa-heart"></i>
+                        <div class="heart1"><i class="far fa-heart"></i></div>
+                        <div class="heart2"><i class="fas fa-heart"></i></div>
                     </div>
                 </div>
             </a>
@@ -96,7 +97,8 @@
                     <p class="localisation-resto">Charonne</p>
                     </div>
                     <div class="position-heart">
-                        <i class="fas fa-heart"></i>
+                        <div class="heart1"><i class="far fa-heart"></i></div>
+                        <div class="heart2"><i class="fas fa-heart"></i></div>
                     </div>
                 </div>
             </a>
@@ -111,7 +113,8 @@
                     <p class="localisation-resto">Cité Rouge</p>
                     </div>
                     <div class="position-heart">
-                        <i class="fas fa-heart"></i>
+                        <div class="heart1"><i class="far fa-heart"></i></div>
+                        <div class="heart2"><i class="fas fa-heart"></i></div>
                     </div>
                 </div>
             </a>
@@ -126,7 +129,8 @@
                     <p class="localisation-resto">Folie-Méricourt</p>
                     </div>
                     <div class="position-heart">
-                        <i class="fas fa-heart"></i>
+                        <div class="heart1"><i class="far fa-heart"></i></div>
+                        <div class="heart2"><i class="fas fa-heart"></i></div>
                     </div>
                 </div>
             </a>
