step1 A la française

--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -31,7 +31,8 @@
                 <h1>À la française</h1>
             </div>
             <div class="position-heart">
-                <i class="fas fa-heart"></i>
+                <div class="heart1"><i class="far fa-heart"></i></div>
+                <div class="heart2"><i class="fas fa-heart"></i></div>
             </div>
         </div>
         <div class="titre-entree--page1">
