--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -16,7 +16,7 @@
     <header>
         <div class="first-title--page1">
             <div class="logo-fleche">
-                <i class="fas fa-arrow-left"></i>
+                <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="logo-oh-my-food">
                 <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
@@ -26,117 +26,122 @@
         </div>
     </header>
     <main class="main--page1">
-        <div class="titre-page1">
-            <div class="titre-page1-A-la-francaise">
-                <h1>À la française</h1>
-            </div>
-            <div class="position-heart">
-                <div class="heart1"><i class="far fa-heart"></i></div>
-                <div class="heart2"><i class="fas fa-heart"></i></div>
-            </div>
-        </div>
-        <div class="titre-entree--page1">
-            <h1 class="underline-page1">Entrées</h1>
-        </div>
-        <div class="entree--page1">
-            <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
-                    <p class="descriptif-plat--page1">Aux zestes d'orange</p>
+        <form>
+            <div class="titre-page1">
+                <div class="titre-page1-A-la-francaise">
+                    <h1>À la française</h1>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">25€</p>
+                <div class="position-heart">
+                    <div class="heart1"><i class="far fa-heart"></i></div>
+                    <div class="heart2"><i class="fas fa-heart"></i></div>
                 </div>
             </div>
-            <div class="description-carte--page1">
+            <div class="titre-entree--page1">
+                <h1 class="underline-page1">Entrées</h1>
+            </div>
+            <div class="entree--page1">
+                <div class="description-carte--page1">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Velouté de légumes d'antan</h4>
-                        <p class="descriptif-plat--page1">Carotte, panais, topinambour</p>
+                        <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
+                        <p class="descriptif-plat--page1">Aux zestes d'orange</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">35€</p>
+                        <p class="p-prix--page1">25€</p>
                     </div>
-            </div>
-            <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Soupe à l'oignon</h4>
-                        <p class="descriptif-plat--page1">Revisitée</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">20€</p>
-                    </div>
-                    <div class="div-au-survol">
-                        <p>youpi</p>
-                    </div>
-            </div>
-        </div>
-        <div class="titre-plats--page1">
-            <h1 class="underline-page1">Plats</h1>
-        </div>
-        <div class="plat--page1">
-            <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
-                    <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">40€</p>
+                <div class="description-carte--page1">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Velouté de légumes d'antan</h4>
+                            <p class="descriptif-plat--page1">Carotte, panais, topinambour</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">35€</p>
+                        </div>
                 </div>
-            </div>
-            <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Magret de canard</h4>
-                        <p class="descriptif-plat--page1">Et parmentier de pommes de terre</p>
+                <div class="description-carte--page1">
+                    <input type="checkbox" name="soupe-oignon" id="soupe-oignon" value="soupe-oignon"/>
+                    <label for="soupe-oignon" class="fas fa-check">
+                    <div class="div-qui-bouge">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Soupe à l'oignon</h4>
+                            <p class="descriptif-plat--page1">Revisitée</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">20€</p>
+                        </div>
                     </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">35€</p>
-                    </div>
-            </div>
-            <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Pigeonneau d’Ille-et-Vilaine</h4>
-                        <p class="descriptif-plat--page1">Sur son lit de gnocchis aux légumes</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">44€</p>
-                    </div>
-            </div>
-        </div>
-        <div class="titre-dessert--page1">
-            <h1 class="underline-page1">Desserts</h1>
-        </div>
-        <div class="dessert--page1">
-            <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
-                    <p class="descriptif-plat--page1">Et purée de noisettes</p>
-                </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">18€</p>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
             </div>
-            <div class="description-carte--page1">
+            <div class="titre-plats--page1">
+                <h1 class="underline-page1">Plats</h1>
+            </div>
+            <div class="plat--page1">
+                <div class="description-carte--page1">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Fondant au chocolat</h4>
-                        <p class="descriptif-plat--page1">Revisité</p>
+                        <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
+                        <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">22€</p>
+                        <p class="p-prix--page1">40€</p>
                     </div>
+                </div>
+                <div class="description-carte--page1">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Magret de canard</h4>
+                            <p class="descriptif-plat--page1">Et parmentier de pommes de terre</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">35€</p>
+                        </div>
+                </div>
+                <div class="description-carte--page1">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Pigeonneau d’Ille-et-Vilaine</h4>
+                            <p class="descriptif-plat--page1">Sur son lit de gnocchis aux légumes</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">44€</p>
+                        </div>
+                </div>
             </div>
-            <div class="description-carte--page1">
+            <div class="titre-dessert--page1">
+                <h1 class="underline-page1">Desserts</h1>
+            </div>
+            <div class="dessert--page1">
+                <div class="description-carte--page1">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Millefeuille croustillant</h4>
-                        <p class="descriptif-plat--page1">Myrtilles et pâte d’amande</p>
+                        <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
+                        <p class="descriptif-plat--page1">Et purée de noisettes</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">23€</p>
+                        <p class="p-prix--page1">18€</p>
                     </div>
+                </div>
+                <div class="description-carte--page1">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Fondant au chocolat</h4>
+                            <p class="descriptif-plat--page1">Revisité</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">22€</p>
+                        </div>
+                </div>
+                <div class="description-carte--page1">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Millefeuille croustillant</h4>
+                            <p class="descriptif-plat--page1">Myrtilles et pâte d’amande</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">23€</p>
+                        </div>
+                </div>
             </div>
-        </div>
-        <div class="button-submit">
-            <button type="submit" class="explorer-button--page-1">Commander</button>
-        </div>
+            <div class="button-submit">
+                <button type="submit" class="explorer-button--page-1">Commander</button>
+            </div>
+        </form>
     </main>
     <footer class="wrapper-1">
         <div class="logo-footer-oh-my-food">
