implémentation du checkbox

--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -16,7 +16,7 @@
     <header>
         <div class="first-title--page1">
             <div class="logo-fleche">
-                <i class="fas fa-arrow-left"></i>
+                <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
             </div>
             <div class="logo-oh-my-food">
                 <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
