--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </div>
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
-            <a class="contact-footer" href="">Contact</a>
+            <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
         </div>
         </div>
     </footer>
