implémentation du checkbox

--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -41,15 +41,24 @@
             </div>
             <div class="entree--page1">
                 <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
-                        <p class="descriptif-plat--page1">Aux zestes d'orange</p>
+                    <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
+                    <label for="Entree1" class="fas fa-check">
+                    <div class="div-qui-bouge">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
+                            <p class="descriptif-plat--page1">Aux zestes d'orange</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">25€</p>
+                        </div>
                     </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">25€</p>
-                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
                 <div class="description-carte--page1">
+                    <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
+                    <label for="Entree2" class="fas fa-check">
+                    <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
                             <h4 class="titre-carte--page1">Velouté de légumes d'antan</h4>
                             <p class="descriptif-plat--page1">Carotte, panais, topinambour</p>
@@ -57,10 +66,13 @@
                         <div class="prix--page1">
                             <p class="p-prix--page1">35€</p>
                         </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>   
                 </div>
                 <div class="description-carte--page1">
-                    <input type="checkbox" name="soupe-oignon" id="soupe-oignon" value="soupe-oignon"/>
-                    <label for="soupe-oignon" class="fas fa-check">
+                    <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
+                    <label for="Entree3" class="fas fa-check">
                     <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
                             <h4 class="titre-carte--page1">Soupe à l'oignon</h4>
@@ -79,15 +91,24 @@
             </div>
             <div class="plat--page1">
                 <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
-                        <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
+                    <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
+                    <label for="Plat1" class="fas fa-check">
+                    <div class="div-qui-bouge">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
+                            <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">40€</p>
+                        </div>
                     </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">40€</p>
-                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
                 <div class="description-carte--page1">
+                    <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
+                    <label for="Plat2" class="fas fa-check">
+                    <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
                             <h4 class="titre-carte--page1">Magret de canard</h4>
                             <p class="descriptif-plat--page1">Et parmentier de pommes de terre</p>
@@ -95,8 +116,14 @@
                         <div class="prix--page1">
                             <p class="p-prix--page1">35€</p>
                         </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
                 <div class="description-carte--page1">
+                    <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
+                    <label for="Plat3" class="fas fa-check">
+                    <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
                             <h4 class="titre-carte--page1">Pigeonneau d’Ille-et-Vilaine</h4>
                             <p class="descriptif-plat--page1">Sur son lit de gnocchis aux légumes</p>
@@ -104,31 +131,49 @@
                         <div class="prix--page1">
                             <p class="p-prix--page1">44€</p>
                         </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
             </div>
-            <div class="titre-dessert--page1">
+            <div class="titre-plats--page1">
                 <h1 class="underline-page1">Desserts</h1>
             </div>
-            <div class="dessert--page1">
+            <div class="plat--page1">
                 <div class="description-carte--page1">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
-                        <p class="descriptif-plat--page1">Et purée de noisettes</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">18€</p>
-                    </div>
-                </div>
-                <div class="description-carte--page1">
+                    <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
+                    <label for="Dessert1" class="fas fa-check">
+                    <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Fondant au chocolat</h4>
-                            <p class="descriptif-plat--page1">Revisité</p>
+                            <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
+                            <p class="descriptif-plat--page1">Et purée de noisettes</p>
                         </div>
                         <div class="prix--page1">
-                            <p class="p-prix--page1">22€</p>
+                            <p class="p-prix--page1">18€</p>
                         </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
+                </div>
+                    <div class="description-carte--page1">
+                        <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
+                        <label for="Dessert2" class="fas fa-check">
+                        <div class="div-qui-bouge">
+                            <div class="carte-resto--page1">
+                                <h4 class="titre-carte--page1">Fondant au chocolat</h4>
+                                <p class="descriptif-plat--page1">Revisité</p>
+                            </div>
+                            <div class="prix--page1">
+                                <p class="p-prix--page1">22€</p>
+                            </div>
+                        </div>
+                            <div class="div-au-survol"></div>
+                        </label>
                 </div>
                 <div class="description-carte--page1">
+                    <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
+                    <label for="Dessert3" class="fas fa-check">
+                    <div class="div-qui-bouge">
                         <div class="carte-resto--page1">
                             <h4 class="titre-carte--page1">Millefeuille croustillant</h4>
                             <p class="descriptif-plat--page1">Myrtilles et pâte d’amande</p>
@@ -136,12 +181,14 @@
                         <div class="prix--page1">
                             <p class="p-prix--page1">23€</p>
                         </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
                 </div>
-            </div>
-            <div class="button-submit">
-                <button type="submit" class="explorer-button--page-1">Commander</button>
-            </div>
         </form>
+        <div class="button-submit">
+            <button type="submit" class="explorer-button--page-1">Commander</button>
+        </div>
     </main>
     <footer class="wrapper-1">
         <div class="logo-footer-oh-my-food">
