--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -40,15 +40,24 @@
         </div>
         <div class="entree--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Ravioles de foie gras</h4>
-                    <p class="descriptif-plat--page1">Accompagnés de leur crème à la truffe</p>
+                <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
+                <label for="Entree1" class="fas fa-check">
+                <div class="div-qui-bouge">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Ravioles de foie gras</h4>
+                        <p class="descriptif-plat--page1">Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">25€</p>
+                    </div>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">25€</p>
-                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
+                <label for="Entree2" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Caviar osciètre </h4>
                         <p class="descriptif-plat--page1">Sur blini à la farine de blé noir</p>
@@ -56,8 +65,14 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>   
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
+                <label for="Entree3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Homard et espuma de potiron</h4>
                         <p class="descriptif-plat--page1">Mariné aux zestes d'orange</p>
@@ -65,31 +80,34 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
-            <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Foie gras de canard cuit entier</h4>
-                    <p class="descriptif-plat--page1">Confiture de figue et pain toasté</p>
-                </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">35€</p>
-                </div>
-        </div>
         </div>
         <div class="titre-plats--page1">
             <h1 class="underline-page1">Plats</h1>
         </div>
         <div class="plat--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Noix de coquilles Saint-Jacques</h4>
-                    <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
+                <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
+                <label for="Plat1" class="fas fa-check">
+                <div class="div-qui-bouge">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Noix de coquilles Saint-Jacques</h4>
+                        <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">40€</p>
+                    </div>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">40€/p>
-                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
+                <label for="Plat2" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Langoustine poêlée</h4>
                         <p class="descriptif-plat--page1">Purée de patate douce</p>
@@ -97,8 +115,14 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
+                <label for="Plat3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Mijoté de queue de boeuf </h4>
                         <p class="descriptif-plat--page1">Et riz sauvage aux zestes de citron</p>
@@ -106,31 +130,49 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
         </div>
-        <div class="titre-dessert--page1">
+        <div class="titre-plats--page1">
             <h1 class="underline-page1">Desserts</h1>
         </div>
-        <div class="dessert--page1">
+        <div class="plat--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Macaron noisette et chocolat</h4>
-                    <p class="descriptif-plat--page1">Glace au caramel brun et sel de Guérande</p>
-                </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">18€</p>
-                </div>
-            </div>
-            <div class="description-carte--page1">
+                <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
+                <label for="Dessert1" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Baba au rhum revisité</h4>
-                        <p class="descriptif-plat--page1">Avec son coulis de citron</p>
+                        <h4 class="titre-carte--page1">Macaron noisette et chocolat</h4>
+                        <p class="descriptif-plat--page1">Glace au caramel brun et sel de Guérande</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">22€</p>
+                        <p class="p-prix--page1">18€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
+            </div>
+                <div class="description-carte--page1">
+                    <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
+                    <label for="Dessert2" class="fas fa-check">
+                    <div class="div-qui-bouge">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Baba au rhum revisité </h4>
+                            <p class="descriptif-plat--page1">Avec son coulis de citron</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">22€</p>
+                        </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
+                <label for="Dessert3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Tarte au citron meringuée </h4>
                         <p class="descriptif-plat--page1">Déstructurée</p>
@@ -138,7 +180,10 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
                     </div>
-            </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
+                </div>
         </div>
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
