--- a/Le-delice.html
+++ b/Le-delice.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">            
         <title>Le délice des sens</title>
   </head>
-  <body>
+  <body class="marge--page1">
     <header>
         <div class="first-title--page1">
             <div class="logo-fleche">
@@ -40,31 +40,49 @@
         </div>
         <div class="entree--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Tartare de thon</h4>
-                    <p class="descriptif-plat--page1">Assaisonné au yuzu</p>
+                <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
+                <label for="Entree1" class="fas fa-check">
+                <div class="div-qui-bouge">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Tartare de thon</h4>
+                        <p class="descriptif-plat--page1">Assaisonné au yuzu</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">25€</p>
+                    </div>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">25€</p>
-                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
+                <label for="Entree2" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Bouchée de homard croustillant</h4>
-                        <p class="descriptif-plat--page1">Et sa farandole de petits légumes</p>
+                        <p class="descriptif-plat--page1">BEt sa farandole de petits légumes</p>
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>   
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
+                <label for="Entree3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Velouté de cèpes</h4>
+                        <h4 class="titre-carte--page1">Velouté de cèpes </h4>
                         <p class="descriptif-plat--page1">Aux truffes</p>
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
         </div>
         <div class="titre-plats--page1">
@@ -72,24 +90,39 @@
         </div>
         <div class="plat--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Poulet rôti aux herbes de Provence </h4>
-                    <p class="descriptif-plat--page1">Et sa crème de truffe</p>
+                <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
+                <label for="Plat1" class="fas fa-check">
+                <div class="div-qui-bouge">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Poulet rôti aux herbes de Provence </h4>
+                        <p class="descriptif-plat--page1">Et sa crème de truffe</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">40€</p>
+                    </div>
                 </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">40€</p>
-                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
+                <label for="Plat2" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Langouste rôtie </h4>
+                        <h4 class="titre-carte--page1">Langouste rôtie</h4>
                         <p class="descriptif-plat--page1">Et ses légumes de saison</p>
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
+                <label for="Plat3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Côte de boeuf Angus </h4>
                         <p class="descriptif-plat--page1">Et sa purée de panais</p>
@@ -97,40 +130,60 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
         </div>
-        <div class="titre-dessert--page1">
+        <div class="titre-plats--page1">
             <h1 class="underline-page1">Desserts</h1>
         </div>
-        <div class="dessert--page1">
+        <div class="plat--page1">
             <div class="description-carte--page1">
-                <div class="carte-resto--page1">
-                    <h4 class="titre-carte--page1">Farandole de desserts</h4>
-                    <p class="descriptif-plat--page1">Du chef</p>
-                </div>
-                <div class="prix--page1">
-                    <p class="p-prix--page1">18€</p>
-                </div>
-            </div>
-            <div class="description-carte--page1">
+                <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
+                <label for="Dessert1" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Crème brulée </h4>
-                        <p class="descriptif-plat--page1">Revisité</p>
+                        <h4 class="titre-carte--page1">Farandole de desserts</h4>
+                        <p class="descriptif-plat--page1">Du chef</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">22€</p>
+                        <p class="p-prix--page1">18€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
+            </div>
+                <div class="description-carte--page1">
+                    <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
+                    <label for="Dessert2" class="fas fa-check">
+                    <div class="div-qui-bouge">
+                        <div class="carte-resto--page1">
+                            <h4 class="titre-carte--page1">Crème brulée </h4>
+                            <p class="descriptif-plat--page1">Revisitée</p>
+                        </div>
+                        <div class="prix--page1">
+                            <p class="p-prix--page1">22€</p>
+                        </div>
+                    </div>
+                        <div class="div-au-survol"></div>
+                    </label>
             </div>
             <div class="description-carte--page1">
+                <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
+                <label for="Dessert3" class="fas fa-check">
+                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Tiramisu </h4>
+                        <h4 class="titre-carte--page1">Tiramisu</h4>
                         <p class="descriptif-plat--page1">À la noisette</p>
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
                     </div>
+                </div>
+                    <div class="div-au-survol"></div>
+                </label>
             </div>
-        </div>
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
         </div>
