animation loader et apparition de section

--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -11,21 +11,21 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;600&display=swap" rel="stylesheet">  
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">            
         <title>La note enchantée</title>
-  </head>
-  <body class="marge--page1">
-    <header>
-        <div class="first-title--page1">
-            <div class="logo-fleche">
+    </head>
+    <body class="marge--page1">
+      <header>
+          <div class="first-title--page1">
+              <div class="logo-fleche">
                 <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
-            </div>
-            <div class="logo-oh-my-food">
-                <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
-            </div>
-        </div>
-        <div class="image-background-la-note-enchantee">
-        </div>
-    </header>
-    <main class="main--page1">
+              </div>
+              <div class="logo-oh-my-food">
+                  <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
+              </div>
+          </div>
+          <div class="image-background-la-note-enchantee">
+          </div>
+      </header>
+      <main class="main--page1">
         <div class="titre-page1">
             <div class="titre-page1-A-la-francaise">
                 <h1>La note enchantée</h1>
@@ -40,24 +40,15 @@
         </div>
         <div class="entree--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
-                <label for="Entree1" class="fas fa-check">
-                <div class="div-qui-bouge">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Ravioles de foie gras</h4>
-                        <p class="descriptif-plat--page1">Accompagnés de leur crème à la truffe</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">25€</p>
-                    </div>
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Ravioles de foie gras</h4>
+                    <p class="descriptif-plat--page1">Accompagnés de leur crème à la truffe</p>
                 </div>
-                    <div class="div-au-survol"></div>
-                </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">25€</p>
+                </div>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
-                <label for="Entree2" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Caviar osciètre </h4>
                         <p class="descriptif-plat--page1">Sur blini à la farine de blé noir</p>
@@ -65,14 +56,8 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>   
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
-                <label for="Entree3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Homard et espuma de potiron</h4>
                         <p class="descriptif-plat--page1">Mariné aux zestes d'orange</p>
@@ -80,34 +65,31 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
+            <div class="description-carte--page1">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Foie gras de canard cuit entier</h4>
+                    <p class="descriptif-plat--page1">Confiture de figue et pain toasté</p>
+                </div>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">35€</p>
+                </div>
+        </div>
         </div>
         <div class="titre-plats--page1">
             <h1 class="underline-page1">Plats</h1>
         </div>
         <div class="plat--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
-                <label for="Plat1" class="fas fa-check">
-                <div class="div-qui-bouge">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Noix de coquilles Saint-Jacques</h4>
-                        <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">40€</p>
-                    </div>
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Noix de coquilles Saint-Jacques</h4>
+                    <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
                 </div>
-                    <div class="div-au-survol"></div>
-                </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">40€/p>
+                </div>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
-                <label for="Plat2" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Langoustine poêlée</h4>
                         <p class="descriptif-plat--page1">Purée de patate douce</p>
@@ -115,14 +97,8 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
-                <label for="Plat3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Mijoté de queue de boeuf </h4>
                         <p class="descriptif-plat--page1">Et riz sauvage aux zestes de citron</p>
@@ -130,49 +106,31 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
         </div>
-        <div class="titre-plats--page1">
+        <div class="titre-dessert--page1">
             <h1 class="underline-page1">Desserts</h1>
         </div>
-        <div class="plat--page1">
+        <div class="dessert--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
-                <label for="Dessert1" class="fas fa-check">
-                <div class="div-qui-bouge">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Macaron noisette et chocolat</h4>
+                    <p class="descriptif-plat--page1">Glace au caramel brun et sel de Guérande</p>
+                </div>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">18€</p>
+                </div>
+            </div>
+            <div class="description-carte--page1">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Macaron noisette et chocolat</h4>
-                        <p class="descriptif-plat--page1">Glace au caramel brun et sel de Guérande</p>
+                        <h4 class="titre-carte--page1">Baba au rhum revisité</h4>
+                        <p class="descriptif-plat--page1">Avec son coulis de citron</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">18€</p>
+                        <p class="p-prix--page1">22€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
-            </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
-                    <label for="Dessert2" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Baba au rhum revisité </h4>
-                            <p class="descriptif-plat--page1">Avec son coulis de citron</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">22€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
-                <label for="Dessert3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Tarte au citron meringuée </h4>
                         <p class="descriptif-plat--page1">Déstructurée</p>
@@ -180,10 +138,7 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
-                </div>
+            </div>
         </div>
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
@@ -205,9 +160,9 @@
         </div>
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
-            <a class="contact-footer" href="">Contact</a>
+            <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
         </div>
         </div>
     </footer>
-  </body>
-</html>
+    </body>
+  </html> 
