--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             </form>
         </div>
     </header>
+    <div class="loader"></div>
     <main class="wrapper">
         <section class="first-section">
             <div class="explorer">
