--- a/A-la-francaise.html
+++ b/A-la-francaise.html
@@ -26,166 +26,114 @@
         </div>
     </header>
     <main class="main--page1">
-        <form>
-            <div class="titre-page1">
-                <div class="titre-page1-A-la-francaise">
-                    <h1>À la française</h1>
+        <div class="titre-page1">
+            <div class="titre-page1-A-la-francaise">
+                <h1>À la française</h1>
+            </div>
+            <div class="position-heart">
+                <div class="heart1"><i class="far fa-heart"></i></div>
+                <div class="heart2"><i class="fas fa-heart"></i></div>
+            </div>
+        </div>
+        <div class="titre-entree--page1">
+            <h1 class="underline-page1">Entrées</h1>
+        </div>
+        <div class="entree--page1">
+            <div class="description-carte--page1">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
+                    <p class="descriptif-plat--page1">Aux zestes d'orange</p>
                 </div>
-                <div class="position-heart">
-                    <div class="heart1"><i class="far fa-heart"></i></div>
-                    <div class="heart2"><i class="fas fa-heart"></i></div>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">25€</p>
                 </div>
             </div>
-            <div class="titre-entree--page1">
-                <h1 class="underline-page1">Entrées</h1>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Velouté de légumes d'antan</h4>
+                        <p class="descriptif-plat--page1">Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">35€</p>
+                    </div>
             </div>
-            <div class="entree--page1">
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
-                    <label for="Entree1" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Tartare de poulpe acidulé</h4>
-                            <p class="descriptif-plat--page1">Aux zestes d'orange</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">25€</p>
-                        </div>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Soupe à l'oignon</h4>
+                        <p class="descriptif-plat--page1">Revisitée</p>
                     </div>
-                        <div class="div-au-survol"></div>
-                    </label>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">20€</p>
+                    </div>
+                    <div class="div-au-survol">
+                        <i class="fas fa-check-circle"></i>
+                    </div>
+            </div>
+        </div>
+        <div class="titre-plats--page1">
+            <h1 class="underline-page1">Plats</h1>
+        </div>
+        <div class="plat--page1">
+            <div class="description-carte--page1">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
+                    <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
                 </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
-                    <label for="Entree2" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Velouté de légumes d'antan</h4>
-                            <p class="descriptif-plat--page1">Carotte, panais, topinambour</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">35€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>   
-                </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
-                    <label for="Entree3" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Soupe à l'oignon</h4>
-                            <p class="descriptif-plat--page1">Revisitée</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">20€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">40€</p>
                 </div>
             </div>
-            <div class="titre-plats--page1">
-                <h1 class="underline-page1">Plats</h1>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Magret de canard</h4>
+                        <p class="descriptif-plat--page1">Et parmentier de pommes de terre</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">35€</p>
+                    </div>
             </div>
-            <div class="plat--page1">
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
-                    <label for="Plat1" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Coquilles Saint-Jacques</h4>
-                            <p class="descriptif-plat--page1">Accompagnées d'une purée de panais</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">40€</p>
-                        </div>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Pigeonneau d’Ille-et-Vilaine</h4>
+                        <p class="descriptif-plat--page1">Sur son lit de gnocchis aux légumes</p>
                     </div>
-                        <div class="div-au-survol"></div>
-                    </label>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">44€</p>
+                    </div>
+            </div>
+        </div>
+        <div class="titre-dessert--page1">
+            <h1 class="underline-page1">Desserts</h1>
+        </div>
+        <div class="dessert--page1">
+            <div class="description-carte--page1">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
+                    <p class="descriptif-plat--page1">Et purée de noisettes</p>
                 </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
-                    <label for="Plat2" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Magret de canard</h4>
-                            <p class="descriptif-plat--page1">Et parmentier de pommes de terre</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">35€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>
-                </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
-                    <label for="Plat3" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Pigeonneau d’Ille-et-Vilaine</h4>
-                            <p class="descriptif-plat--page1">Sur son lit de gnocchis aux légumes</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">44€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">18€</p>
                 </div>
             </div>
-            <div class="titre-plats--page1">
-                <h1 class="underline-page1">Desserts</h1>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Fondant au chocolat</h4>
+                        <p class="descriptif-plat--page1">Revisité</p>
+                    </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">22€</p>
+                    </div>
             </div>
-            <div class="plat--page1">
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
-                    <label for="Dessert1" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Pétales de violettes glacés</h4>
-                            <p class="descriptif-plat--page1">Et purée de noisettes</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">18€</p>
-                        </div>
+            <div class="description-carte--page1">
+                    <div class="carte-resto--page1">
+                        <h4 class="titre-carte--page1">Millefeuille croustillant</h4>
+                        <p class="descriptif-plat--page1">Myrtilles et pâte d’amande</p>
                     </div>
-                        <div class="div-au-survol"></div>
-                    </label>
-                </div>
-                    <div class="description-carte--page1">
-                        <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
-                        <label for="Dessert2" class="fas fa-check">
-                        <div class="div-qui-bouge">
-                            <div class="carte-resto--page1">
-                                <h4 class="titre-carte--page1">Fondant au chocolat</h4>
-                                <p class="descriptif-plat--page1">Revisité</p>
-                            </div>
-                            <div class="prix--page1">
-                                <p class="p-prix--page1">22€</p>
-                            </div>
-                        </div>
-                            <div class="div-au-survol"></div>
-                        </label>
-                </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
-                    <label for="Dessert3" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Millefeuille croustillant</h4>
-                            <p class="descriptif-plat--page1">Myrtilles et pâte d’amande</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">23€</p>
-                        </div>
+                    <div class="prix--page1">
+                        <p class="p-prix--page1">23€</p>
                     </div>
-                        <div class="div-au-survol"></div>
-                    </label>
-                </div>
-        </form>
+            </div>
+        </div>
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
         </div>
@@ -206,7 +154,7 @@
         </div>
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
-            <a class="contact-footer" href="">Contact</a>
+            <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
         </div>
         </div>
     </footer>
