--- a/La-palette.html
+++ b/La-palette.html
@@ -40,24 +40,15 @@
         </div>
         <div class="entree--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree1" id="Entree1" value="Entree1">
-                <label for="Entree1" class="fas fa-check">
-                <div class="div-qui-bouge">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Fricassée d'escargot</h4>
-                        <p class="descriptif-plat--page1">Au piment d'Espelette </p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">25€</p>
-                    </div>
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Fricassée d'escargot</h4>
+                    <p class="descriptif-plat--page1">Au piment d'Espelette </p>
                 </div>
-                    <div class="div-au-survol"></div>
-                </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">25€</p>
+                </div>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree2" id="Entree2" value="Entree2"/>
-                <label for="Entree2" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Foie gras de canard mi-cuit</h4>
                         <p class="descriptif-plat--page1">Et ses copeaux de truffe noire</p>
@@ -65,14 +56,8 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>   
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Entree3" id="Entree3" value="Entree3"/>
-                <label for="Entree3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Oeuf au plat</h4>
                         <p class="descriptif-plat--page1">Assaisonné à la truffe sur lit de caviar</p>
@@ -80,9 +65,6 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">20€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
         </div>
         <div class="titre-plats--page1">
@@ -90,39 +72,24 @@
         </div>
         <div class="plat--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat1" id="Plat1" value="Plat1"/>
-                <label for="Plat1" class="fas fa-check">
-                <div class="div-qui-bouge">
-                    <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Filet de boeuf aux herbes</h4>
-                        <p class="descriptif-plat--page1">Accompagné de sa ribambelle de légumes</p>
-                    </div>
-                    <div class="prix--page1">
-                        <p class="p-prix--page1">40€</p>
-                    </div>
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Filet de boeuf aux herbes</h4>
+                    <p class="descriptif-plat--page1">Accompagné de sa ribambelle de légumes</p>
                 </div>
-                    <div class="div-au-survol"></div>
-                </label>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">40€</p>
+                </div>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat2" id="Plat2" value="Plat2"/>
-                <label for="Plat2" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Parmentier de queue de boeuf/h4>
+                        <h4 class="titre-carte--page1">Parmentier de queue de boeuf</h4>
                         <p class="descriptif-plat--page1">À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="prix--page1">
                         <p class="p-prix--page1">35€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Plat3" id="Plat3" value="Plat3"/>
-                <label for="Plat3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Filet de turbot</h4>
                         <p class="descriptif-plat--page1">Aux agrumes</p>
@@ -130,49 +97,31 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">44€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
         </div>
-        <div class="titre-plats--page1">
+        <div class="titre-dessert--page1">
             <h1 class="underline-page1">Desserts</h1>
         </div>
-        <div class="plat--page1">
+        <div class="dessert--page1">
             <div class="description-carte--page1">
-                <input type="checkbox" name="Dessert1" id="Dessert1" value="Dessert1"/>
-                <label for="Dessert1" class="fas fa-check">
-                <div class="div-qui-bouge">
+                <div class="carte-resto--page1">
+                    <h4 class="titre-carte--page1">Paris-Brest</h4>
+                    <p class="descriptif-plat--page1">Revisité</p>
+                </div>
+                <div class="prix--page1">
+                    <p class="p-prix--page1">18€</p>
+                </div>
+            </div>
+            <div class="description-carte--page1">
                     <div class="carte-resto--page1">
-                        <h4 class="titre-carte--page1">Paris-Brest</h4>
-                        <p class="descriptif-plat--page1">Revisité</p>
+                        <h4 class="titre-carte--page1">Macaron au chocolat d'exception </h4>
+                        <p class="descriptif-plat--page1">Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="prix--page1">
-                        <p class="p-prix--page1">18€</p>
+                        <p class="p-prix--page1">22€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
-            </div>
-                <div class="description-carte--page1">
-                    <input type="checkbox" name="Dessert2" id="Dessert2" value="Dessert2"/>
-                    <label for="Dessert2" class="fas fa-check">
-                    <div class="div-qui-bouge">
-                        <div class="carte-resto--page1">
-                            <h4 class="titre-carte--page1">Macaron au chocolat d'exception</h4>
-                            <p class="descriptif-plat--page1">Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div class="prix--page1">
-                            <p class="p-prix--page1">22€</p>
-                        </div>
-                    </div>
-                        <div class="div-au-survol"></div>
-                    </label>
             </div>
             <div class="description-carte--page1">
-                <input type="checkbox" name="Dessert3" id="Dessert3" value="Dessert3"/>
-                <label for="Dessert3" class="fas fa-check">
-                <div class="div-qui-bouge">
                     <div class="carte-resto--page1">
                         <h4 class="titre-carte--page1">Mousse au chocolat </h4>
                         <p class="descriptif-plat--page1">Au piment d'Espelette et à la truffe noire</p>
@@ -180,10 +129,8 @@
                     <div class="prix--page1">
                         <p class="p-prix--page1">23€</p>
                     </div>
-                </div>
-                    <div class="div-au-survol"></div>
-                </label>
             </div>
+        </div>
         <div class="button-submit">
             <button type="submit" class="explorer-button--page-1">Commander</button>
         </div>
@@ -204,7 +151,7 @@
         </div>
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
-            <a class="contact-footer" href="">Contact</a>
+            <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
         </div>
         </div>
     </footer>
