check first index html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +18,7 @@
             <div class="logo-oh-my-food-index">
             <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
             </div>
+        </div>
         <div class="location">
             <form>
                 <i class="fas fa-map-marker-alt"></i>
@@ -42,27 +43,28 @@
                 <div class="titre-fonctionnement">
                     <h1>Fonctionnements</h1>
                 </div>
-            <div class="trois-div">
-                <div class="div">
-                    <div class="number">1</div>
-                    <div class="logo-fonctionnement">
-                        <i class="fa fa-mobile" aria-hidden="true"></i>
+                <div class="trois-div">
+                    <div class="div">
+                        <div class="number">1</div>
+                        <div class="logo-fonctionnement">
+                            <i class="fa fa-mobile" aria-hidden="true"></i>
+                        </div>
+                            <div><p>Choissisez un restaurant</p></div>
+                        </div>
+                    <div class="div">
+                        <div class="number">2</div>
+                        <div class="logo-fonctionnement">
+                            <i class="fa fa-list"></i>
+                        </div>
+                        <div><p>Composez votre menu</p></div>
                     </div>
-                        <div><p>Choissisez un restaurant</p></div>
+                    <div class="div--pink">
+                        <div class="number">3</div>
+                        <div class="logo-fonctionnement">
+                            <i class="fas fa-store"></i>
+                        </div>
+                        <div><p>Dégustez au restaurant</p></div>
                     </div>
-                <div class="div">
-                    <div class="number">2</div>
-                     <div class="logo-fonctionnement">
-                        <i class="fa fa-list"></i>
-                     </div>
-                    <div><p>Composez votre menu</p></div>
-                </div>
-                <div class="div--pink">
-                    <div class="number">3</div>
-                    <div class="logo-fonctionnement">
-                        <i class="fas fa-store"></i>
-                    </div>
-                    <div><p>Dégustez au restaurant</p></div>
                 </div>
             </div>
         </section>
@@ -155,7 +157,6 @@
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
             <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
-        </div>
         </div>
     </footer>
 </body>
