--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -98,7 +98,7 @@
                     <p class="descriptif-plat--page1">Sur lit de purée de céleri-rave</p>
                 </div>
                 <div class="prix--page1">
-                    <p class="p-prix--page1">40€>
+                    <p class="p-prix--page1">40€</p>
                 </div>
                 <div class="div-au-survol">
                     <i class="fas fa-check-circle"></i>
@@ -191,7 +191,6 @@
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
             <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
-        </div>
         </div>
     </footer>
     </body>
