--- a/La-palette.html
+++ b/La-palette.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -179,7 +179,6 @@
         <div class="third-block-footer">
             <p class="p-footer-1">Mentions légales</p>
             <a class="contact-footer" href="mailto:titi@gmail.com">Contact</a>
-        </div>
         </div>
     </footer>
   </body>
