--- a/Le-delice.html
+++ b/Le-delice.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
         <title>Le délice des sens</title>
   </head>
   <body class="marge--page1">
-    <header>
+    <header  class="marge--page1">
         <div class="first-title--page1">
             <div class="logo-fleche">
                 <a href="./index.html"><i class="fas fa-arrow-left"></i></a>
@@ -24,8 +24,8 @@
         </div>
         <div class="image-background-Le-delice">
         </div>
-    </header class="marge--page1">
-    <main class="main--page1">
+    </header>
+        <main class="main--page1">
         <div class="titre-page1">
             <div class="titre-page1-A-la-francaise">
                 <h1>Le délice des sens</h1>
