--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
              <div class="first-title">
                 <div class="logo-oh-my-food-index">
                 <img class="logo" src="images/logo/ohmyfood.png" alt="logo-oh-my-food">
+                </div>
             </div>
             <div class="location">
                 <form>
@@ -136,6 +137,7 @@
                         </div>
                     </div>
                 </a>
+            </div>
         </section>
     </main>
     <footer class="wrapper-1">
