--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="titre-entree--page1">
-            <h1 class="underline-page1">Entrées</h1>
+            <h2 class="underline-page1">ENTRÉES</h2>
         </div>
         <div class="entree--page1">
             <div class="description-carte--page1">
@@ -89,7 +89,7 @@
         </div>
         </div>
         <div class="titre-plats--page1">
-            <h1 class="underline-page1">Plats</h1>
+            <h2 class="underline-page1">PLATS</h2>
         </div>
         <div class="plat--page1">
             <div class="description-carte--page1">
@@ -130,7 +130,7 @@
             </div>
         </div>
         <div class="titre-dessert--page1">
-            <h1 class="underline-page1">Desserts</h1>
+            <h2 class="underline-page1">DESSERTS</h2>
         </div>
         <div class="dessert--page1">
             <div class="description-carte--page1">
